新增验证码功能及相关逻辑实现，包括滑块拼图验证码生成与验证、前后端联调及登录流程改造。